unpackaged/main/default/objects/Campaign_Channel__c/Campaign_Channel__c.object-meta.xml
<CustomObject>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Campaign Channel</label>
    <nameField>
        <displayFormat>CC_{0000}</displayFormat>
        <label>Campaign Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>