unpackaged/main/default/objects/Campaign_Channel__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Influencer_Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Channels</relationshipLabel>
    <relationshipName>Campaign_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>