unpackaged/main/default/objects/Campaign_Channel__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>US-0011896 - 1.4.1 Influencer Campaign (new campaign member record type)</description>
    <formula>TEXT( Campaign__r.EndDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign End Date</label>
    <type>Text</type>
</CustomField>