unpackaged/main/default/objects/Campaign_Channel__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <description>US-0011896 - 1.4.1 Influencer Campaign (new campaign member record type)</description>
    <formula>TEXT( Campaign__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>