unpackaged/main/default/objects/Campaign_Channel__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Campaign Channels</relationshipLabel>
    <relationshipName>Campaign_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>