unpackaged/main/default/objects/Campaign_Channel__c/fields/Comments_Experience_With_Influencers__c.field-meta.xml
<CustomField>
    <fullName>Comments_Experience_With_Influencers__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <inlineHelpText>Please only add process related comments (e.g. quality of content, timeline keeping etc.). No sensitive personal information.</inlineHelpText>
    <label>Comments (experience with influencers)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>