unpackaged/main/default/objects/Campaign_Channel__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Channels</relationshipLabel>
    <relationshipName>Campaign_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>