unpackaged/main/default/objects/Campaign_Channel__c/fields/Content_Link__c.field-meta.xml
<CustomField>
    <fullName>Content_Link__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Content Link</label>
    <type>Url</type>
</CustomField>