unpackaged/main/default/objects/Campaign_Channel__c/fields/Cooperation_With_Other_Brands__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_With_Other_Brands__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <inlineHelpText>E.g. competitor brands</inlineHelpText>
    <label>Cooperation With Other Brands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>