unpackaged/main/default/objects/Campaign_Channel__c/fields/Cost_Per_Mile_Per_Story_CPM__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Mile_Per_Story_CPM__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Cost Per Mile Per Story (CPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>