unpackaged/main/default/objects/Campaign_Channel__c/fields/Engagement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rate__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Engagement Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>