unpackaged/main/default/objects/Campaign_Channel__c/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Interactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>