unpackaged/main/default/objects/Campaign_Channel__c/fields/Product_Costs__c.field-meta.xml
<CustomField>
    <fullName>Product_Costs__c</fullName>
    <label>Product Costs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>