unpackaged/main/default/objects/Campaign_Channel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approached</fullName>
                <default>true</default>
                <label>Approached</label>
            </value>
            <value>
                <fullName>Suggested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Content Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>