unpackaged/main/default/objects/Campaign_Channel__c/fields/Type_of_Social_Media_Channel__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Social_Media_Channel__c</fullName>
    <description>US-0011876 - 1.4. Influencer Campaign (Channels for Campaign)</description>
    <formula>TEXT(Channel__r.Social_Media_Channel_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Social Media Channel</label>
    <type>Text</type>
</CustomField>